--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,6 +42,7 @@ application.langs="en"
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
+applyEvolutions.default=true
 
 # Logger
 # ~~~~~
